--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,18 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>9.2.1.jre15</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.1</version>
+        </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
